# vox-transcribe

./: .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/voxtranscribe/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  voxtral_jni.cpp
app/src/main/java/com/example/voxtranscribe/: MainActivity.kt  VoxApplication.kt
app/src/main/java/com/example/voxtranscribe/data/: AndroidSpeechRecognizerImpl.kt  AudioRecorder.kt  DynamicTranscriptionRepository.kt  EngineState.kt  NotesRepository.kt  TranscriptionService.kt  VoxtralJni.kt  VoxtralModelManager.kt  VoxtralTranscriptionRepository.kt
app/src/main/java/com/example/voxtranscribe/data/ai/: AiRepository.kt  MediaPipeAiRepository.kt  ModelDownloadManager.kt
app/src/main/java/com/example/voxtranscribe/data/db/: Entities.kt  NotesDao.kt  VoxDatabase.kt
app/src/main/java/com/example/voxtranscribe/di/: DatabaseModule.kt  RepositoryModule.kt
app/src/main/java/com/example/voxtranscribe/domain/: LogEntry.kt  TranscriptionRepository.kt
app/src/main/java/com/example/voxtranscribe/ui/: DetailViewModel.kt  TranscriptionViewModel.kt  VoxtralModelViewModel.kt
app/src/main/java/com/example/voxtranscribe/ui/components/: AudioVisualizer.kt  CommonUi.kt  DebugStatusBar.kt
app/src/main/java/com/example/voxtranscribe/ui/navigation/: NavGraph.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/voxtranscribe/: ExampleUnitTest.kt
docs/: IMPROVEMENTS.md  PLAN.md  STATUS.md  VOXTRAL_CPP.md  VULKAN_INTEGRATION.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
